samples/_failures_safe/1761624327_55a54d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20cb57b9.c: In function ‘main’:
./samples/SAFE/__tmp_20cb57b9.c:163:16: error: missing terminating " character
  163 |         printf("
      |                ^
./samples/SAFE/__tmp_20cb57b9.c:163:9: error: expected expression at end of input
  163 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_20cb57b9.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20cb57b9.c:163:9: error: expected declaration or statement at end of input
